--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://horizon:horizon123@cluster0.ftx2f90.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
