--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,8 @@
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
+    "http-errors": "^2.0.0",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.2"
