--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@uploadthing/react": "^7.1.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -16,7 +17,9 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "react-dropzone": "^14.3.5",
+    "uploadthing": "^7.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
