--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,5 +23,12 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "build": "npm install"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
