--- a/render.yaml
+++ b/render.yaml
@@ -16,13 +16,21 @@ services:
         sync: false
       - key: UPLOADTHING_APP_ID
         sync: false
+      - key: PORT
+        value: "8080"
+      - key: JWT_ISSUER
+        value: "eventify-backend.onrender.com"
+      - key: ACCESS_TOKEN_EXPIRY
+        value: "12h"
+      - key: REFRESH_TOKEN_EXPIRY
+        value: "1y"
 
   - type: web
     name: eventify-frontend
     env: node
     plan: free
     buildCommand: cd Frontend && npm install && npm run build
-    startCommand: cd Frontend && npm run preview
+    startCommand: cd Frontend && npm run preview -- --host 0.0.0.0 --port 10000
     envVars:
       - key: VITE_API_URL
         value: https://eventify-backend.onrender.com
