--- a/render.yaml
+++ b/render.yaml
@@ -19,7 +19,7 @@ services:
       - key: PORT
         value: "8080"
       - key: JWT_ISSUER
-        value: "eventify-backend.onrender.com"
+        value: "eventify-backend-jbco.onrender.com"
       - key: ACCESS_TOKEN_EXPIRY
         value: "12h"
       - key: REFRESH_TOKEN_EXPIRY
@@ -33,7 +33,7 @@ services:
     startCommand: cd Frontend && npm run preview -- --host 0.0.0.0 --port 10000
     envVars:
       - key: VITE_API_URL
-        value: https://eventify-backend.onrender.com
+        value: https://eventify-backend-jbco.onrender.com
       - key: VITE_SEATGEEK_CLIENT_ID
         sync: false
       - key: VITE_UPLOADTHING_APP_ID
